--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,3 +5,7 @@
 
 // Global SCSS styling
 // @see https://docs.nativescript.org/ui/styling
+
+.fa {
+    font-family: FontAwesome, fontawesome-webfont;
+  }
